# ConsistencyAwareLib

./: README.md  pyproject.toml
evaluation_index/: __init__.py
evaluation_index/adjusted/: AMI.py  AMIq.py  AVIq.py  PureAccuracy.py  SG.py  SMI.py  SMIq.py  SVI.py  SVIq.py  __init__.py
evaluation_index/baseline/: MI.py  MIq.py  NMI.py  NMIq.py  NVIq.py  VI.py  VIq.py  __init__.py
evaluation_index/metrics/: PHSIC.py  PSED.py  PureAccuracy.py  SGINI.py  StandardizedAccuracy.py  __init__.py
evaluation_index/utils/: __init__.py  contingency.py  entropy.py  permutation.py  variance.py
test/: test.py  test_in_paper.py  test_information.py  test_psed.py
