[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ConsistencyAwareLib"
version = "0.1.0"
description = "A Python library for consistency-aware evaluation metrics."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evaluation_index*"]
